--- a/index.html
+++ b/index.html
@@ -91,43 +91,43 @@
   <h1 class="cap2">MY FUNDAMENTALS</h1>
   <div class="grid">
     <div class="pic-box one">
-      <img src="../assets/another-poster.png" alt="" />
+      <img src="" alt="" />
     </div>
     <div class="pic-box two">
-      <img src="../assets/another-site1.png" alt="" />
+      <img src="assets/another-site1.png" alt="" />
     </div>
-    <div class="pic-box three"><img src="../assets/another-3.png" alt="" /></div>
+    <div class="pic-box three"><img src="assets/another-3.png" alt="" /></div>
     <div class="pic-box four">
-      <img src="../assets/another-site2.png" alt="" />
+      <img src="assets/another-site2.png" alt="" />
     </div>
-    <div class="pic-box five"><img src="../assets/bareen-1.png" alt="" /></div>
-        <div class="pic-box six"><img src="../assets/bareen-2.png" alt="" /></div>
-    <div class="pic-box seven"><img src="../assets/bareen-3.png" alt="" /></div>
+    <div class="pic-box five"><img src="aassets/bareen-1.png" alt="" /></div>
+        <div class="pic-box six"><img src="assets/bareen-2.png" alt="" /></div>
+    <div class="pic-box seven"><img src="assets/bareen-3.png" alt="" /></div>
     <div class="pic-box eight">
-      <img src="../assets/bareen-post-2-min.png" alt="" />
+      <img src="assets/bareen-post-2-min.png" alt="" />
     </div>
   </div>
 <div class="main">
   <h1 class="cap2">MY FUNDAMENTALS</h1>
   <div class="grid">
     <div class="pic-box one">
-      <img src="../assets/abyss-min.webp" alt="" />
+      <img src="assets/abyss-min.webp" alt="" />
     </div>
     <div class="pic-box two">
-      <img src="../assets/background-min.png" alt="" />
+      <img src="assets/background-min.png" alt="" />
     </div>
     <div class="pic-box three">
-      <img src="../assets/port-site1.png" alt="" />
+      <img src="assets/port-site1.png" alt="" />
     </div>
     <div class="pic-box four">
-      <img src="../assets/port-site3.png" alt="" />
+      <img src="assets/port-site3.png" alt="" />
     </div>
-    <div class="pic-box five"><img src="../assets/penguin.webp" alt="" /></div>
+    <div class="pic-box five"><img src="assets/penguin.webp" alt="" /></div>
     <div class="pic-box sixsecond">
-      <img src="../assets/bareen-poster2.webp" alt="" />
+      <img src="assets/bareen-poster2.webp" alt="" />
     </div>
     <div class="pic-box eight">
-      <img src="../assets/jester.webp" alt="" />
+      <img src="assets/jester.webp" alt="" />
     </div>
   </div>
 
