--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="pic-box four">
       <img src="assets/another-site2.png" alt="" />
     </div>
-    <div class="pic-box five"><img src="aassets/bareen-1.png" alt="" /></div>
+    <div class="pic-box five"><img src="assets/bareen-1.png" alt="" /></div>
         <div class="pic-box six"><img src="assets/bareen-2.png" alt="" /></div>
     <div class="pic-box seven"><img src="assets/bareen-3.png" alt="" /></div>
     <div class="pic-box eight">
