--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   </div>
 </div>
 <div class="main">
-  <h1 class="cap2">MY FUNDAMENTALS</h1>
-  <div class="grid1">
+  <h1 class="cap2 border">MY FUNDAMENTALS</h1>
+  <div class="grid1 border">
     <div class="inner-info">
       <p class="cap">Web Development</p>
       <p>
@@ -88,7 +88,8 @@
   </div>
 </div>
 <div class="main">
-  <h1 class="cap2">MY FUNDAMENTALS</h1>
+  <h1 class="cap2">Web Development</h1>
+  <p class="p">The following section highlights my work in web development and design, featuring two projects: a redesign for the reuse clothing store Another Closet and a hypothetical collaboration between Bareen and Glyptoteket. These examples showcase both practical redesign skills and creative conceptual work.</p>
   <div class="grid">
     <div class="pic-box one">
       <img src="assets/another-poster.png" alt="portfolio image" />
@@ -108,7 +109,8 @@
     </div>
   </div>
 <div class="main">
-  <h1 class="cap2">MY FUNDAMENTALS</h1>
+  <h1 class="cap2">Art & Design</h1>
+  <p class="p">This section focuses on my artistic and graphic design projects, including professional assignments, freelance work, and personal explorations. From structured client work to experimental visuals, it reflects my ability to adapt style and approach across different contexts.</p>
   <div class="grid">
     <div class="pic-box one">
       <img src="assets/abyss-min.webp" alt="portfolio image" />
