--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
 </div>
 <div class="main">
-  <h1 class="cap2">Web Development</h1>
+  <h1 class="cap2">Web Projects</h1>
   <p class="p">The following section highlights my work in web development and design, featuring two projects: a redesign for the reuse clothing store Another Closet and a hypothetical collaboration between Bareen and Glyptoteket. These examples showcase both practical redesign skills and creative conceptual work.</p>
   <div class="grid">
     <div class="pic-box one">
