--- a/index.html
+++ b/index.html
@@ -14,22 +14,26 @@
     <script src="script.js" defer></script>
 </head>
 <body body data-theme="Light">
-    <main>
-        <div class="intro">
-  <div class="titles">
-    <h1 class="text">WEB</h1><h1 class="code">DEVELOPMENT</h1>
+  <main>
+  <div class="intro">
+    <div class="titles">
+      <h1 class="text">WEB</h1><h1 class="code">DEVELOPMENT</h1>
+    </div>
+    <div class="info">
+      <p class="p1">
+        Hi, I'm Oliver A. L. Bengtsson, a Multimedia Design student in Copenhagen,
+        specializing in Web Development, Frontend, UI/UX, and Graphic Design. 
+        <br>
+        <br> Mail: Oliverbengtsson67@gmail.com
+        <br> Phone: 0045-29280052
+      </p>
+      <p class="p2">
+        Hi, I'm Oliver A. L. Bengtsson, a Multimedia Design student in Copenhagen,
+        specializing in Web Development, Frontend, UI/UX, and Graphic Design.
+      </p>
+      <img class="profil" src="assets/profil.PNG" alt="profil image">
+    </div>
   </div>
-  <div class="info">
-    <p class="p1">
-      Hi, I'm Oliver A. L. Bengtsson, a Multimedia Design student in Copenhagen,
-      specializing in Web Development, Frontend, UI/UX, and Graphic Design.
-    </p>
-    <p class="p2">
-      Hi, I'm Oliver A. L. Bengtsson, a Multimedia Design student in Copenhagen,
-      specializing in Web Development, Frontend, UI/UX, and Graphic Design.
-    </p>
-  </div>
-</div>
 <div class="main">
   <h1 class="cap2 border">MY FUNDAMENTALS</h1>
   <div class="grid1 border">
