--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <br> Mail: Oliverbengtsson67@gmail.com
         <br> Phone: 0045-29280052
       </p>
-      <p class="p2">
+<!--       <p class="p2">
         Hi, I'm Oliver A. L. Bengtsson, a Multimedia Design student in Copenhagen,
         specializing in Web Development, Frontend, UI/UX, and Graphic Design.
-      </p>
+      </p> -->
       <img class="profil" src="assets/profil.PNG" alt="profil image">
     </div>
   </div>
@@ -91,9 +91,27 @@
     </div>
   </div>
 </div>
+<div class="main fb">
+  <h1 class="cap2">Latest Project</h1>
+  <p class="p">In the project, we were tasked with building a website based on a pre-established Figma design, focusing on developing it in Astro while emphasizing reusable components and the atomic design principle, as well as further practicing our CSS capabilities.</p>
+  <div class="link"><a href="https://imp-figma-design.netlify.app/team/">Visit Project site</a></div>
+  <div class="grid">
+    <div class="pic-box oneA">
+      <img src="assets/fb-view.jpg" alt="" />
+    </div>
+    <div class="pic-box twoA">
+      <img src="assets/fb-hero.jpg" alt="" />
+    </div>
+    <div class="pic-box three"A><img src="assets/fb-frames.jpg" alt="portfolio image" /></div>
+        <div class="pic-box sixA"><img src="assets/fb-footer.jpg" alt="portfolio image" /></div>
+    <div class="pic-box sevenA"><img src="assets/fb-contact.jpg" alt="portfolio image" /></div>
+    <div class="pic-box eightA">
+      <img src="assets/fb-sections.jpg" alt="portfolio image" />
+    </div>
+</div>
 <div class="main">
   <h1 class="cap2">Web Projects</h1>
-  <p class="p">The following section highlights my work in web development and design, featuring two projects: a redesign for the reuse clothing store Another Closet and a hypothetical collaboration between Bareen and Glyptoteket. These examples showcase both practical redesign skills and creative conceptual work.</p>
+  <p class="p">The following section highlights some of my previous projects in web development and design, featuring two projects: a redesign for the reuse clothing store Another Closet and a hypothetical collaboration between Bareen and Glyptoteket.</p>
   <div class="grid">
     <div class="pic-box one">
       <img src="assets/another-poster.png" alt="portfolio image" />
@@ -111,10 +129,10 @@
     <div class="pic-box eight">
       <img src="assets/bareen-post-2-min.png" alt="portfolio image" />
     </div>
-  </div>
+</div>
 <div class="main">
   <h1 class="cap2">Art & Design</h1>
-  <p class="p">This section focuses on my artistic and graphic design projects, including professional assignments, freelance work, and personal explorations. From structured client work to experimental visuals, it reflects my ability to adapt style and approach across different contexts.</p>
+  <p class="p">This section are a small showcase of my artistic and graphic design projects, including assignments, freelance work, and personal projects. From structured work to experimental visuals.</p>
   <div class="grid">
     <div class="pic-box one">
       <img src="assets/abyss-min.webp" alt="portfolio image" />
@@ -135,7 +153,7 @@
     <div class="pic-box eight">
       <img src="assets/jester.webp" alt="portfolio image" />
     </div>
-  </div>
+</div>
 
   <!-- Lightbox -->
   <div id="lightbox">
