--- a/index.html
+++ b/index.html
@@ -40,53 +40,36 @@
     <div class="inner-info">
       <p class="cap">Web Development</p>
       <p>
-        I work confidently with HTML5, CSS3, and JavaScript, creating responsive
-        and accessible websites. My focus is on mobile-first design, ensuring
-        smooth user experiences across devices. This foundation supports all my
-        digital projects.
+I work confidently with HTML5, CSS3, and JavaScript, creating responsive and accessible websites through thoughtful design, ensuring smooth user experiences across devices. This foundation supports all my digital projects.
       </p>
     </div>
     <div class="inner-info">
       <p class="cap">Framework & Performance</p>
       <p>
-        With Astro, I build fast and efficient web projects tailored for
-        performance. I complement this with Supabase, connecting frontends to
-        real-time data and dynamic features. Together, they allow me to deliver
-        modern, scalable solutions.
+Many of my projects have been built with Astro to create efficient websites. I’ve also worked with databases, most notably Supabase, connecting frontends to real-time data and dynamic features. Together, they allow me to deliver modern, scalable solutions.
       </p>
     </div>
     <div class="inner-info">
       <p class="cap">AI & Creative Tools</p>
       <p>
-        I explore ChatGPT for brainstorming, problem-solving, and refining
-        ideas. In addition, AI image generation gives me new creative
-        possibilities, expanding beyond traditional methods. Both support faster
-        workflows and fresh perspectives.
+I believe AI will play a major role in our future and it has been one of my key interests over the past few years. ChatGPT has become a valuable tool for brainstorming, problem-solving, and refining ideas. In addition, AI image generation has become a digital tool I use to digital content.
       </p>
     </div>
     <div class="inner-info">
       <p class="cap">Design & Layout</p>
       <p>
-        I use Photoshop, Artstudio Pro, and Figma to shape ideas into polished
-        designs. From concept sketches to detailed layouts, I adapt tools to fit
-        the workflow. My aim is always clarity, balance, and visual impact.
+I’m comfortable working with Photoshop, Artstudio Pro, and Figma to shape ideas into polished designs. I enjoy refining layouts, experimenting with colors, and creating clear visual structures. Artstudio Pro has been my go-to tool on iPad for years, used for sketching and developing digital illustrations.
       </p>
     </div>
     <div class="inner-info">
       <p class="cap">Content & Presentation</p>
       <p>
-        Through Premiere Pro and Illustrator, I create video and graphic content
-        that communicates effectively. I enjoy combining visuals with
-        storytelling to make ideas stand out. These tools help me bridge
-        creativity with clear messaging.
-      </p>
+I’ve worked with Premiere Pro and Illustrator, mainly at a foundational level, but I enjoy exploring and learning new tools. Both video editing and vector design allow me to tell stories in different ways. I see each new program as a chance to expand my creative workflow and technical range.      </p>
     </div>
     <div class="inner-info">
       <p class="cap">Collaboration</p>
       <p>
-        Using GitHub, I organize projects, track versions, and collaborate
-        efficiently. Clean workflows are important to me, whether solo or in a
-        team. This ensures projects remain structured and easy to build upon.
+I use GitHub across various projects to organize files, track versions, and collaborate efficiently. Maintaining clean and structured workflows is important to me throughout every project. Whether working independently or in a team, I value clarity, version control, and progress tracking.
       </p>
     </div>
   </div>
